HTTP. Servlets. 35. Cookies

--- a/web/precis/commit-26.html
+++ b/web/precis/commit-26.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        max-width: 60%;
-        min-height: 400vh;
-        margin-left: 10%;
-        text-align: justify;
-    }
-</style>
 <body>
 <h1>HTTP. Servlets. 26. HttpServlet. Жизненный цикл сервлетов</h1>
 <p>Apache Tomcat - это всего лишь сервер, у которого есть три модуля:</p>
