--- a/web/precis/commit-33.html
+++ b/web/precis/commit-33.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        max-width: 60%;
-        min-height: 400vh;
-        margin-left: 10%;
-        text-align: justify;
-    }
-</style>
 <body>
 <h1>HTTP. Servlets. 33. Практика. Часть 1</h1>
 <img src="commit-33-1.png" width="50%" />
