--- a/web/precis/commit-32.html
+++ b/web/precis/commit-32.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        max-width: 60%;
-        min-height: 400vh;
-        margin-left: 10%;
-        text-align: justify;
-    }
-</style>
 <body>
 <h1>HTTP. Servlets. 32. Архитектура web приложений. MVC</h1>
 <p>Актуальная архитектура простых веб-приложений выглядят следующим образом:</p>
