HTTP. Servlets. 37. Attributes

--- a/web/precis/commit-36.html
+++ b/web/precis/commit-36.html
@@ -25,15 +25,23 @@
 </p>
 <pre>Cookie: <text style="color: blue">JSESSIONID</text>=<text style="color: red">GY789SD8T9GAS......</text></pre>
 <p>
-    Т.е. когда отправляем запрос серверу, то используется куки с названием <code><text style="color: blue">JSESSIONID</text></code>
+    Т.е. когда отправляем запрос серверу, то используется куки с названием <code>
+    <text style="color: blue">JSESSIONID</text>
+</code>
     и её идентификатор (идентификатор сессии), если такая куки есть. Если такой куки нет, то этот запрос пришёл впервые
     на сервер, а на стороне сервера, в каталине сервлет контейнере есть обычный ассоциативный массив, где ключом
-    является <code><text style="color: blue">JSESSIONID</text></code>, а значением объект типа <code>Session</code>.
+    является <code>
+    <text style="color: blue">JSESSIONID</text>
+</code>, а значением объект типа <code>Session</code>.
     Если у нас нет куки, тогда её нужно создать (сессию) и положить в этот ассоциативный массив и вернуть
     <code>Set-Cookie</code> с установленным значением этой сессии. В последующем запросы просто приходят с этой кукой
     и сервер уже обрабатывает это значение на объект типа <code>Session</code>.
 </p>
 <h3>В отличии от cookie, session хранятся на стороне сервера, в ассоциативном массиве.</h3>
-<img src="commit-36-2.png" width="100%" />
+<img src="commit-36-2.png" width="100%"/>
+<p>
+    Сессии в основном используются для того, чтобы хранить там какие-то значения, который ассоциируются с множеством
+    request'ов.
+</p>
 </body>
 </html>
